--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=armazenar
 
-spring.datasource.url=jdbc:mysql://localhost/armazenar
+spring.datasource.url=jdbc:mysql://mysql_armazenar:3306/armazenar?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=fefe21@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
-spring.devtools.livereload.enabled=true
-
-# Linha que faz o Spring Boot escutar em todas as interfaces
 server.address=0.0.0.0
 server.port=8080
