--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=armazenar
 
-spring.datasource.url=jdbc:mysql://mysql_armazenar:3306/armazenar?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+# Conecta ao MySQL usando o nome do servio definido no docker-compose
+spring.datasource.url=jdbc:mysql://mysql_armazenar:3306/armazenar?createDatabaseIfNotExist=true&connectTimeout=60000&socketTimeout=60000
 spring.datasource.username=root
 spring.datasource.password=fefe21@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-server.address=0.0.0.0
-server.port=8080
+# Flyway (opcional)
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
