--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=armazenar
 
-# Conecta ao MySQL usando o nome do servio definido no docker-compose
+# Conexão MySQL interna
 spring.datasource.url=jdbc:mysql://mysql_armazenar:3306/armazenar?createDatabaseIfNotExist=true&connectTimeout=60000&socketTimeout=60000
 spring.datasource.username=root
 spring.datasource.password=fefe21@
@@ -9,6 +9,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Flyway (opcional)
-spring.flyway.enabled=true
-spring.flyway.locations=classpath:db/migration
+server.port=8080
+server.address=0.0.0.0
