--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=armazenar
 
-# Conex„o MySQL interna
+# Conex√£o MySQL interna
 spring.datasource.url=jdbc:mysql://mysql_armazenar:3306/armazenar?createDatabaseIfNotExist=true&connectTimeout=60000&socketTimeout=60000
 spring.datasource.username=root
 spring.datasource.password=fefe21@
