--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,24 @@
 version: '3.9'
 
 services:
-  mysql_armazenar:
-    image: mysql:8.0
-    container_name: mysql_armazenar
-    environment:
-      MYSQL_ROOT_PASSWORD: fefe21@
-      MYSQL_DATABASE: armazenar
-    ports:
-      - "3307:3306"  # Opcional, para acessar o banco via host
-    volumes:
-      - mysql_data:/var/lib/mysql
-      - ./dump.sql:/docker-entrypoint-initdb.d/dump.sql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-pfefe21@"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
-
   spring_armazenar:
     build:
       context: .
       dockerfile: Dockerfile
     container_name: spring_armazenar
-    depends_on:
-      mysql_armazenar:
-        condition: service_healthy
     ports:
       - "8080:8080"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysql_armazenar:3306/armazenar?createDatabaseIfNotExist=true&connectTimeout=60000&socketTimeout=60000
+      SPRING_APPLICATION_NAME: armazenar
+      SERVER_PORT: 8080
+      SERVER_ADDRESS: 0.0.0.0
+      SPRING_DATASOURCE_URL: jdbc:mysql://trolley.proxy.rlwy.net:42891/railway?useSSL=false&serverTimezone=UTC
       SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: fefe21@
+      SPRING_DATASOURCE_PASSWORD: DOoZceVrmavKDLSwbKhmfCvuvwSeyOYz
       SPRING_DATASOURCE_DRIVER_CLASS_NAME: com.mysql.cj.jdbc.Driver
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+      SPRING_JPA_SHOW_SQL: "true"
+      SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT: org.hibernate.dialect.MySQL8Dialect
+      SPRING_FLYWAY_ENABLED: "true"
+      SPRING_FLYWAY_LOCATIONS: classpath:db/migration
     restart: unless-stopped
-
-volumes:
-  mysql_data:
