--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,19 @@
 spring.application.name=armazenar
-
-# Conexão MySQL interna
-spring.datasource.url=jdbc:mysql://mysql_armazenar:3306/armazenar?createDatabaseIfNotExist=true&connectTimeout=60000&socketTimeout=60000
-spring.datasource.username=root
-spring.datasource.password=fefe21@
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-
 server.port=8080
 server.address=0.0.0.0
+
+
+# Conexão com MySQL remoto (Railway)
+spring.datasource.url=jdbc:mysql://trolley.proxy.rlwy.net:42891/railway?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=DOoZceVrmavKDLSwbKhmfCvuvwSeyOYz
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
